# VerificationValidationTeam20

./: README.md  bookit_exe.spec  pyproject.toml  run_bookit.py
Ejecutable/: Instrucciones.md
data4test/: librosEjemplo.txt
src/bookit/: cli.py  commands.py  models.py  storage.py  validators.py
src/bookit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tests/: .coverage  test_cases_it1.py  test_cases_it2.py  test_cases_it3.py  test_cases_it4.py  test_cases_it5.py  test_smoke.py
src/tests old/: test_cases_it1.py
src/tests old/report_tc_it01/: test_cases_it1_py.html  z_83b7c56cb4fed587___init___py.html  z_83b7c56cb4fed587_commands_py.html
src/tests old/report_tc_it02/: function_index.html  test_cases_it2_py.html  z_83b7c56cb4fed587_commands_py.html
src/tests old/report_tc_old_it01/: status.json
src/tests old/report_tc_old_it02/: index.html  z_83b7c56cb4fed587___init___py.html
src/tests/report_tc_01/: class_index.html  function_index.html  index.html  status.json  test_cases_it1_py.html  z_83b7c56cb4fed587___init___py.html  z_83b7c56cb4fed587_commands_py.html  z_83b7c56cb4fed587_models_py.html  z_83b7c56cb4fed587_validators_py.html
src/tests/report_tc_02/: class_index.html  function_index.html  index.html  status.json  test_cases_it2_py.html  z_83b7c56cb4fed587___init___py.html  z_83b7c56cb4fed587_commands_py.html  z_83b7c56cb4fed587_models_py.html  z_83b7c56cb4fed587_validators_py.html
src/tests/report_tc_03/: class_index.html  function_index.html  index.html  status.json  test_cases_it3_py.html  z_83b7c56cb4fed587_models_py.html  (+3 more)
(+36 files in other folders)
