[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bookit"
version = "0.1.0"
description = "Proyecto created according to the requisites from the team 11"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Team20"}]
license = {text = "MIT"}
dependencies = []


[project.scripts]
bookit = "bookit.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}